--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="blue">#6486FF</color>
+    <color name="gray">#AFAFAF</color>
+    <color name="black2">#1F1F1F</color>
+    <color name="red">#FF5B5B</color>
 </resources>
