items для вопросов на форуме и комментариев

--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:clickable="true"
             android:text="<Group Name>"
             android:textColor="@color/gray"
             android:textSize="20sp"
@@ -42,7 +43,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/btnProfile"
             android:layout_width="38sp"
             android:layout_height="38sp"
             android:layout_marginEnd="12dp"
@@ -54,7 +55,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/btnOptions"
             android:layout_width="50sp"
             android:layout_height="50sp"
             android:layout_marginTop="-12dp"
@@ -63,9 +64,9 @@
             android:backgroundTint="@color/black2"
             android:scaleType="centerCrop"
             android:src="@drawable/setting_2"
-            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton"
-            app:layout_constraintTop_toTopOf="@+id/imageButton" />
+            app:layout_constraintBottom_toBottomOf="@+id/btnProfile"
+            app:layout_constraintEnd_toStartOf="@+id/btnProfile"
+            app:layout_constraintTop_toTopOf="@+id/btnProfile" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
