--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -14,10 +14,10 @@
         android:text="Tankoman228"
         android:textColor="@color/blue"
         android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/ivAvatar"
         app:layout_constraintEnd_toStartOf="@+id/ibMenu"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
+        app:layout_constraintTop_toTopOf="@+id/ivAvatar" />
 
     <TextView
         android:id="@+id/tvText"
@@ -31,10 +31,10 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/ibMenu"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />
 
     <TextView
-        android:id="@+id/tvCommentsNum"
+        android:id="@+id/tvDateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvText" />
 
     <ImageButton
-        android:id="@+id/imageView"
+        android:id="@+id/ivAvatar"
         android:layout_width="80sp"
         android:layout_height="80sp"
         android:layout_marginStart="8dp"
