--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,33 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityRegister"
     android:background="@color/black2">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="@string/registration"
         android:textColor="@color/white"
         android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.22000003" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnRegisterProfile"
+        android:layout_width="0dp"
+        android:layout_height="70sp"
+        android:layout_marginBottom="32dp"
+        android:backgroundTint="@color/blue"
+        android:text="@string/to_register"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/etPasswordConfirm"
+        app:layout_constraintStart_toStartOf="@+id/etPasswordConfirm" />
 
     <EditText
-        android:id="@+id/etRegisterIP"
-        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
+        android:id="@+id/etUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/gray"
         android:ems="10"
-        android:hint="@string/ip_server"
+        android:hint="@string/username"
         android:inputType="textPersonName"
+        android:shadowColor="@color/gray"
         android:textColor="@color/white"
         android:textColorHint="@color/gray"
         android:textSize="24sp"
@@ -39,30 +50,103 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/etRegisterToken"
-        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
+        android:id="@+id/etTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/gray"
         android:ems="10"
-        android:hint="@string/register_token"
+        android:hint="@string/user_title"
         android:inputType="textPersonName"
+        android:shadowColor="@color/gray"
         android:textColor="@color/white"
         android:textColorHint="@color/gray"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/etRegisterIP"
-        app:layout_constraintStart_toStartOf="@+id/etRegisterIP"
-        app:layout_constraintTop_toBottomOf="@+id/etRegisterIP" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etUsername" />
 
-    <Button
-        android:id="@+id/btnRegister"
+    <EditText
+        android:id="@+id/etPassword"
         android:layout_width="0dp"
-        android:layout_height="70sp"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="@color/blue"
-        android:text="@string/to_register"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/etRegisterToken"
-        app:layout_constraintStart_toStartOf="@+id/etRegisterToken"
-        app:layout_constraintTop_toBottomOf="@+id/etRegisterToken" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/gray"
+        android:ems="10"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:shadowColor="@color/gray"
+        android:textColor="@color/white"
+        android:textColorHint="@color/gray"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etContact" />
+
+    <EditText
+        android:id="@+id/etContact"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/gray"
+        android:ems="10"
+        android:hint="@string/recovery_contact"
+        android:inputType="textEmailAddress|phone"
+        android:shadowColor="@color/gray"
+        android:textColor="@color/white"
+        android:textColorHint="@color/gray"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etTitle" />
+
+    <EditText
+        android:id="@+id/etPasswordConfirm"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/gray"
+        android:ems="10"
+        android:hint="@string/confirm_password"
+        android:inputType="textPassword"
+        android:shadowColor="@color/gray"
+        android:textColor="@color/white"
+        android:textColorHint="@color/gray"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
+
+    <EditText
+        android:id="@+id/etToken"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/gray"
+        android:ems="10"
+        android:hint="@string/register_token"
+        android:inputType="textPassword"
+        android:shadowColor="@color/gray"
+        android:textColor="@color/white"
+        android:textColorHint="@color/gray"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnRegisterProfile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
