--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -37,13 +37,13 @@
         android:id="@+id/tvDateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
         android:layout_marginBottom="8dp"
         android:text="17.01.2024 23:20"
         android:textColor="@color/blue"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btnAttachment"
+        app:layout_constraintStart_toStartOf="@+id/btnAttachment"
         app:layout_constraintTop_toBottomOf="@+id/btnAttachment" />
 
     <ImageButton
