--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -46,7 +46,7 @@
             android:id="@+id/btnProfile"
             android:layout_width="38sp"
             android:layout_height="38sp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="16dp"
             android:background="@color/black2"
             android:scaleType="fitCenter"
             android:src="@android:drawable/sym_def_app_icon"
@@ -59,7 +59,7 @@
             android:layout_width="50sp"
             android:layout_height="50sp"
             android:layout_marginTop="-12dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="12dp"
             android:layout_marginBottom="-12dp"
             android:backgroundTint="@color/black2"
             android:scaleType="centerCrop"
@@ -67,6 +67,16 @@
             app:layout_constraintBottom_toBottomOf="@+id/btnProfile"
             app:layout_constraintEnd_toStartOf="@+id/btnProfile"
             app:layout_constraintTop_toTopOf="@+id/btnProfile" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:backgroundTint="@color/black2"
+            android:src="@android:drawable/ic_menu_search"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnOptions"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ListView
